--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/schedulerreact.png" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Scheduler to Help Students"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/schedulerreact.png" /> 
     <link rel = "stylesheet" href = " overall.css"> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166016248-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-166016248-2');
+    </script>
+
     
     <title>Scheduler</title>
   </head>
